[project]
name = "blazeplot"
version = "0.1.0"
description = "BlazePlot listens to a local Fire Dispatch frequency and plots all of the updates come from it on a map to make it more visual."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.3",
    "sounddevice>=0.5.5",
]
